fix(input-error): text overflow

--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -1,4 +1,5 @@
 .popup__input-error {
+  width: 100%;
   color: red;
   font-size: 12px;
   line-height: 1.21;
@@ -6,4 +7,7 @@
   position: absolute;
   top: calc(100% + 5px);
   left: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
